# microservice_training

./: .gitignore  README.md  check_clear_code.sh  pyproject.toml
api/first_api_gateway/: Makefile  app.py  models.py
api/first_api_gateway/decorators/: benchmark_decorator.py  tracert_decorator.py
api/first_api_gateway/utils/: logger.py
